--- a/src/index.pug
+++ b/src/index.pug
@@ -10,17 +10,17 @@ html(lang="en")
       header.header
         img.header__logo(src=require("../src/images/logo1.png"), alt="logo") 
         .header__subtitle "Cuidate, Consientate, Enamorate de ti..."
-        .header__title JABONES ARTESANALES MARGARITA 🌼
+        .header__title JABONES ARTESANALES MARGARITA
         nav.header__nav 
           ul 
-            li 
-              a(href="#") Link1
-            li 
-              a(href="#") Link2
-            li 
-              a(href="#") Link3
-            li 
-              a(href="#") Link4 
+            li.header__item 
+              a(href="#") Quienes Somos
+            li.header__item  
+              a(href="#") Productos
+            li.header__item  
+              a(href="#") Opiniones
+            li.header__item  
+              a(href="#") Contactos  
       main.main
         .main__title jabones organicos faciales
         .main__box
@@ -33,11 +33,11 @@ html(lang="en")
       footer.footer
         nav.footer__nav 
           ul 
-            li 
-              a(href="#") Link1
-            li 
-              a(href="#") Link2
-            li 
-              a(href="#") Link3
-            li 
-              a(href="#") Link4  
+            li.footer__item  
+              a(href="#") Quienes Somos
+            li.footer__item 
+              a(href="#") Productos
+            li.footer__item 
+              a(href="#") Opiniones
+            li.footer__item 
+              a(href="#") Contactos  
