--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,28 +21,35 @@ body {
 
 .header {
   background-color: $colorPink;
+  
+  &__subtitle {
+    font-style: italic;
+    flex: 0 0 auto;
+    align-items: right;
+    font-size: 2em;
+    text-align: center;
 
+  }
   &__title {
-    
+    font-weight: 700;
     flex: 0 0 auto;
     align-items: right;
     font-size: 3em;
     text-align: center;
-    padding-top: 100px;
+    padding-top: 20px;
   }
-
-  &__subtitle {}
 
   img {
+    margin: 0 auto;
     display: block;
-    height: 200px; 
+    height: 250px; 
   }
-  
+
   &__nav {
     font-size: 1.5em;
     text-align: center;
     width: 80%;
-    margin: 0 auto;
+    margin: 15px auto 0;
     padding-bottom: 20px;
     
   }
@@ -54,6 +61,9 @@ body {
     li {
       flex: 0 0 15%;
       a {
+        text-transform: uppercase;
+        font-size: 0.7em;
+        font-weight: 700;
         display: block;
         color: black;
         text-decoration: none;
@@ -84,8 +94,10 @@ body {
   }
 } 
 .card {
-  background-color: rgb(248, 169, 132);
-  margin: 0 30px;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: $colorPink;
+  margin: 0 20px;
   border: 1px solid;
   &__title {
     font-size: 1.5em;
@@ -98,6 +110,6 @@ body {
   }
 }
 .footer {
-  background-color: rgb(248, 169, 132);
+  background-color: $colorPink;
   height: 70px;
 }
