--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,18 +1,23 @@
+@import 'fonts';
+
 //reset default CSS
 
-@import '_nullstyle.scss';
+@import 'nullstyle';
+
+
 
 //variables 
 
 $colorFont: #000;
-$colorPink: rgb(248, 169, 132);
-$colorYellow: rgb(247, 245, 155);
+$colorLight: #faf9e8;
+$colorYellow: #FDDF7E;
+$colorBrightYellow: #fdf505;
 
 
 
 
 body {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: mongolian, sans-serif;
 }
 .container {
   max-width: 1100px;
@@ -20,68 +25,70 @@ body {
 }
 
 .header {
-  background-color: $colorPink;
-  
-  &__subtitle {
-    font-style: italic;
-    flex: 0 0 auto;
-    align-items: right;
-    font-size: 2em;
-    text-align: center;
+  background-color: $colorLight;
+  height: 240px;
+  text-align: center;
+  padding-top: 10px;
 
+  &__subtitle {
+    padding-top: 20px;
+    flex: 0 0 auto;
+    font-size: 1.5em;
+    font-family: mongolian, sans-serif;
+    text-transform: uppercase;
+    font-style: italic;
+  
   }
   &__title {
     font-weight: 700;
-    flex: 0 0 auto;
-    align-items: right;
     font-size: 3em;
-    text-align: center;
-    padding-top: 20px;
+    margin: 50px auto;
+    font-family: julian;
+    font-weight: 400;
   }
 
-  img {
-    margin: 0 auto;
+  img.logo {
+    float: left;
     display: block;
-    height: 250px; 
+    height: 220px; 
   }
 
   &__nav {
     font-size: 1.5em;
-    text-align: center;
-    width: 80%;
-    margin: 15px auto 0;
-    padding-bottom: 20px;
-    
   }
   ul {
-    display: flex;
-    
+    display: flex; 
     justify-content: space-between;
-    
+     
     li {
       flex: 0 0 15%;
+      border-radius: 3px;
+      background-color: $colorYellow;
+      padding: 7px;
       a {
         text-transform: uppercase;
         font-size: 0.7em;
+        line-height: 0.7em;
         font-weight: 700;
         display: block;
         color: black;
-        text-decoration: none;
-      }
-      
+      }      
+    }
+    li:hover {
+      box-shadow: 0 0 7px $colorYellow;
     }
   }
 }
 
 .main {
-  padding-top: 20px;
+  padding-top: 10px;
   background-color: $colorYellow;
   height: 400px;
   text-align: center;
 
   &__title {
-    margin: 20px auto;
-    font-size: 2.5em;
+    margin: 10px auto;
+    font-size: 2em;
     text-transform: uppercase;
     font-weight: 700;
   }
@@ -90,26 +97,39 @@ body {
   }
   &__item {
     flex: 0 0 30%;
-
   }
 } 
 .card {
   padding: 20px;
-  border-radius: 10px;
-  background-color: $colorPink;
+  height: 320px;
+  border-radius: 50%; 
+  background-color: $colorLight;
   margin: 0 20px;
-  border: 1px solid;
+  box-shadow: 0 0 10px $colorLight;
+  overflow: hidden;
+  
+
   &__title {
+   
+    line-height: 1.3em;
+    margin: 0 auto;
+    width: 250px;
     font-size: 1.5em;
   }
   &__photo {
-    height: 150px;
+    margin: 7px auto;
     img {
-      height: 100%;
+      height: 150px;
     }
+  }
+  &__description {
+    text-align: center;
+    line-height: 1.2em;
+    width: 250px;
+    margin: 0 auto;
   }
 }
 .footer {
-  background-color: $colorPink;
+  background-color: $colorLight;
   height: 70px;
 }
