--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -64,7 +64,8 @@ body {
       flex: 0 0 15%;
       border-radius: 3px;
       background-color: $colorYellow;
-      padding: 7px;
+      padding: 3px;
+     
       a {
         text-transform: uppercase;
         font-size: 0.7em;
@@ -72,6 +73,8 @@ body {
         font-weight: 700;
         display: block;
         color: black;
+        border: 1px dotted #000;
+        padding: 5px;
       }      
     }
     li:hover {
