modified components/blocks structure to BEM

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -3,7 +3,7 @@ footer.footer
     nav.footer__nav 
       ul 
         li.footer__item  
-          a(href="#") Quienes Somos
+          a(href="#") Misión
         li.footer__item 
           a(href="#") Productos
         li.footer__item 
