--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,138 +1,14 @@
+//components styles
+@use '../components/header/header';
+@use '../components/footer/footer';
+@use '../components/main/main';
+
+//import fonts and variables
 @import 'fonts';
+@import 'variables';
 
 //reset default CSS
-
 @import 'nullstyle';
 
 
 
-//variables 
-
-$colorFont: #000;
-$colorLight: #faf9e8;
-$colorYellow: #FDDF7E;
-$colorBrightYellow: #fdf505;
-
-
-
-
-body {
-  font-family: mongolian, sans-serif;
-}
-.container {
-  max-width: 1100px;
-  margin: 0 auto;
-}
-
-.header {
-  background-color: $colorLight;
-  height: 240px;
-  text-align: center;
-  padding-top: 10px;
-
-  &__subtitle {
-    padding-top: 20px;
-    flex: 0 0 auto;
-    font-size: 1.5em;
-    font-family: mongolian, sans-serif;
-    text-transform: uppercase;
-    font-style: italic;
-  
-  }
-  &__title {
-    font-weight: 700;
-    font-size: 3em;
-    margin: 50px auto;
-    font-family: julian;
-    font-weight: 400;
-  }
-
-  img.logo {
-    float: left;
-    display: block;
-    height: 220px; 
-  }
-
-  &__nav {
-    font-size: 1.5em;
-  }
-  ul {
-    display: flex; 
-    justify-content: space-between;
-     
-    li {
-      flex: 0 0 15%;
-      border-radius: 3px;
-      background-color: $colorYellow;
-      padding: 3px;
-     
-      a {
-        text-transform: uppercase;
-        font-size: 0.7em;
-        line-height: 0.7em;
-        font-weight: 700;
-        display: block;
-        color: black;
-        border: 1px dotted #000;
-        padding: 5px;
-      }      
-    }
-    li:hover {
-      box-shadow: 0 0 7px $colorYellow;
-    }
-  }
-}
-
-.main {
-  padding-top: 10px;
-  background-color: $colorYellow;
-  height: 400px;
-  text-align: center;
-
-  &__title {
-    margin: 10px auto;
-    font-size: 2em;
-    text-transform: uppercase;
-    font-weight: 700;
-  }
-  &__box {
-    display: flex;
-  }
-  &__item {
-    flex: 0 0 30%;
-  }
-} 
-.card {
-  padding: 20px;
-  height: 320px;
-  border-radius: 50%; 
-  background-color: $colorLight;
-  margin: 0 20px;
-  box-shadow: 0 0 10px $colorLight;
-  overflow: hidden;
-  
-
-  &__title {
-   
-    line-height: 1.3em;
-    margin: 0 auto;
-    width: 250px;
-    font-size: 1.5em;
-  }
-  &__photo {
-    margin: 7px auto;
-    img {
-      height: 150px;
-    }
-  }
-  &__description {
-    text-align: center;
-    line-height: 1.2em;
-    width: 250px;
-    margin: 0 auto;
-  }
-}
-.footer {
-  background-color: $colorLight;
-  height: 70px;
-}
