added swiper-slider to opinions/

--- a/src/components/main/main.pug
+++ b/src/components/main/main.pug
@@ -1,22 +1,22 @@
 main.main
   .container 
-    .main__title jabones organicos faciales
+    .main__title.sectionTitle jabones organicos faciales
     .main__box
       .main__item.card 
         .card__title MIEL
         .card__photo 
-          img.card__image(src=require("../../images/jabon1.jpeg"), alt="image#1")
+          img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
           | Apto para cualquier tipo de piel, remueve celulas muertas, previene las arrugas. Reestructura la dermis, aliviando tambien las infecciones cutaneas.
       .main__item.card 
         .card__title ROMERO
         .card__photo 
-          img.card__image(src=require("../../images/jabon1.jpeg"), alt="image#1")
+          img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
           | Posee una gran cantidad de nutrientes, vitaminas y antioxidantes. Que ayudaran a mantener la piel elastica y firme. Sus propiedades astringentes, lo hacen muy eficaz, para eliminar poros, impurezas y lineas de expresion.
       .main__item.card 
         .card__title PEPINO Y MIEL
         .card__photo 
-          img.card__image(src=require("../../images/jabon1.jpeg"), alt="image#1")
+          img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
           | Hidrata y refresca la piel, es efectivo para las manchas. Retarda el envejecimiento, combate el acne y alivia las quemaduras solares.
