--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -6,12 +6,6 @@
   height: 400px;
   text-align: center;
 
-  &__title {
-    margin: 10px auto;
-    font-size: 2em;
-    text-transform: uppercase;
-    font-weight: 700;
-  }
   &__box {
     display: flex;
   }
@@ -19,6 +13,14 @@
     flex: 0 0 30%;
   }
 } 
+
+.sectionTitle {
+  margin: 10px auto;
+  text-align: center;
+  font-size: 2em;
+  text-transform: uppercase;
+  font-weight: 700;
+}
 .card {
   padding: 20px;
   height: 320px;
@@ -30,8 +32,8 @@
   
 
   &__title {
-   
-    line-height: 1.3em;
+    font-family: julian, sans-serif;
+    line-height: 1em;
     margin: 0 auto;
     width: 250px;
     font-size: 1.5em;
