--- a/src/index.pug
+++ b/src/index.pug
@@ -8,4 +8,5 @@ html(lang="en")
   body
     include components/header/header 
     include components/main/main 
+    include components/opinions/opinions 
     include components/footer/footer
