--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @use '../components/header/header';
 @use '../components/footer/footer';
 @use '../components/main/main';
+@use '../components/opinions/opinions';
 
 //import fonts and variables
 @import 'fonts';
