--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -7,9 +7,9 @@
   padding-top: 10px;
 
   &__subtitle {
-    padding-top: 20px;
+    padding-top: 5px;
     flex: 0 0 auto;
-    font-size: 1.5em;
+    font-size: 1.9em;
     font-family: mongolian, sans-serif;
     text-transform: uppercase;
     font-style: italic;
@@ -17,7 +17,7 @@
   }
   &__title {
     font-weight: 700;
-    font-size: 3em;
+    font-size: 3.7em;
     margin: 50px auto;
     font-family: julian;
     font-weight: 400;
@@ -30,7 +30,8 @@
   }
 
   &__nav {
-    font-size: 1.5em;
+    font-size: 1.7em;
+    line-height: 1.7em;
   }
   ul {
     display: flex; 
@@ -62,6 +63,6 @@
 
 .container {
   font-family: mongolian, sans-serif;
-  max-width: 1100px;
+  max-width: 1300px;
   margin: 0 auto;
 }
