--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -3,7 +3,7 @@
 .main {
   padding-top: 10px;
   background-color: $colorYellow;
-  height: 400px;
+  height: 470px;
   text-align: center;
 
   &__box {
@@ -17,13 +17,13 @@
 .sectionTitle {
   margin: 10px auto;
   text-align: center;
-  font-size: 2em;
+  font-size: 2.2em;
   text-transform: uppercase;
   font-weight: 700;
 }
 .card {
   padding: 20px;
-  height: 320px;
+  height: 370px;
   border-radius: 50%; 
   background-color: $colorLight;
   margin: 0 20px;
@@ -33,27 +33,28 @@
 
   &__title {
     font-family: julian, sans-serif;
-    line-height: 1em;
+    line-height: 1.6em;
     margin: 0 auto;
     width: 250px;
-    font-size: 1.5em;
+    font-size: 1.6em;
   }
   &__photo {
-    margin: 7px auto;
+    margin: 12px auto 7px;
     img {
       height: 150px;
     }
   }
   &__description {
     text-align: center;
-    line-height: 1.2em;
-    width: 250px;
+    line-height: 1.1em;
+    font-size: 1.2em;
+    width: 300px;
     margin: 0 auto;
   }
 }
 
 .container {
   font-family: mongolian, sans-serif;
-  max-width: 1100px;
+  max-width: 1300px;
   margin: 0 auto;
 }
