--- a/src/components/opinions/opinions.scss
+++ b/src/components/opinions/opinions.scss
@@ -4,6 +4,7 @@ body {
   background-color: $colorLight;
 }
 .opinions {
+  padding-top: 20px;
   position: relative;
   
   .swiper-button-prev, .swiper-button-next {
@@ -28,7 +29,7 @@ body {
   height: 230px;
   border-radius: 20px;
   box-shadow: 0 0 50px $colorYellow;
-  margin: 30px auto 30px;
+  margin: 30px auto 45px;
   display: flex;
   justify-content: center;
   
@@ -40,7 +41,7 @@ body {
       background-color: $colorYellow;
       height: 190px;
       border: 7px solid $colorLight;
-      border-radius: 10px;
+      border-radius: 20px;
       padding: 15px;
       text-transform: lowercase;
       text-align: center; 
@@ -50,17 +51,21 @@ body {
     }
   }
   &-opinion {
+    //font-size: 1.1em;
+    //line-height: 1.2em;
    
   }
   &-client {
     text-transform: uppercase;
     margin: 10px auto;
     font-style: italic;
+    font-size: 1.3em;
     
   }
   &-city {
     text-transform: capitalize;
     font-weight: 700;
+    font-size: 1.1em;
   }
 
   &-pagination {
@@ -79,7 +84,7 @@ body {
 
 .container {
   font-family: mongolian, sans-serif;
-  max-width: 1100px;
+  max-width: 1300px;
   margin: 0 auto;
  
 }
