--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,12 +1,13 @@
 footer.footer
   .container 
-    nav.footer__nav 
-      ul 
-        li.footer__item  
-          a(href="#") Misión
-        li.footer__item 
-          a(href="#") Productos
-        li.footer__item 
-          a(href="#") Opiniones
-        li.footer__item 
-          a(href="#") Contactos  
+    .footer__logo
+      img.logo.footer__img(src=require("../../images/logo1yellow.png"), alt="logo")
+    .footer__title.sectionTitle Contactos
+    .footer__row
+      .footer__item Email
+      .footer__item Whatsapp
+      .footer__item Instagram
+      .footer__item Facebook
+
+
+  
