--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,13 +1,11 @@
 footer.footer
   .container 
     .footer__logo
-      img.logo.footer__img(src=require("../../images/logo1yellow.png"), alt="logo")
+      img.logo.footer__img(src=require("../../images/logoPinkWithBG.png"), alt="logo")
     .footer__title.sectionTitle Contactos
     .footer__row
       .footer__item Email
       .footer__item Whatsapp
       .footer__item Instagram
       .footer__item Facebook
-
-
   
