--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,7 +2,7 @@
 
 
 .footer {
-  background-color: $colorYellow;
+  background-color: $colorPink;
   padding: 15px 0;
   &__logo {
     float: left;
