--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -2,7 +2,7 @@
 
 .main {
   padding-top: 10px;
-  background-color: $colorYellow;
+  background-color: $colorPink;
   height: 470px;
   text-align: center;
 
