--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 //variables 
 
 $colorFont: #000;
-$colorLight: #faf9e8;
-$colorYellow: #FDDF7E;
+$colorLight: #f7eff1;
+$colorPink: #ffabab;
 $colorBrightYellow: #fdf505;
