--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -40,7 +40,7 @@
     li {
       flex: 0 0 15%;
       border-radius: 3px;
-      background-color: $colorYellow;
+      background-color: $colorPink;
       padding: 3px;
      
       a {
@@ -55,7 +55,7 @@
       }      
     }
     li:hover {
-      box-shadow: 0 0 7px $colorYellow;
+      box-shadow: 0 0 15px $colorPink;
     }
   }
 }
