--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,14 @@
 //variables 
 
+//colors
 $colorFont: #000;
 $colorLight: #f7eff1;
 $colorPink: #ffabab;
 $colorBrightYellow: #fdf505;
+$colorMint: #c6e5b1;
+
+// fonts
+$font-family-subtitle: amaranth;
+$font-family-title: julian;
+$font-fanily-description: oswald;
+$font-path: "../fonts";
