--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -10,16 +10,15 @@
     padding-top: 5px;
     flex: 0 0 auto;
     font-size: 1.9em;
-    font-family: mongolian, sans-serif;
-    text-transform: uppercase;
+    font-family: $font-family-subtitle;
     font-style: italic;
-  
   }
+
   &__title {
     font-weight: 700;
     font-size: 3.7em;
     margin: 50px auto;
-    font-family: julian;
+    font-family: $font-family-title;
     font-weight: 400;
   }
 
@@ -30,8 +29,10 @@
   }
 
   &__nav {
-    font-size: 1.7em;
-    line-height: 1.7em;
+    font-size: 2em;
+    line-height: 2em;
+    font-family: $font-family-subtitle;
+    
   }
   ul {
     display: flex; 
@@ -40,29 +41,27 @@
     li {
       flex: 0 0 15%;
       border-radius: 3px;
-      background-color: $colorPink;
+      background-color: $colorMint;
       padding: 3px;
      
       a {
+        
         text-transform: uppercase;
         font-size: 0.7em;
         line-height: 0.7em;
-        font-weight: 700;
         display: block;
         color: black;
-        border: 1px dotted #000;
+        border: 1px solid #000;
         padding: 5px;
       }      
     }
     li:hover {
-      box-shadow: 0 0 15px $colorPink;
+      box-shadow: 0 0 15px $colorMint;
     }
   }
 }
 
-
 .container {
-  font-family: mongolian, sans-serif;
   max-width: 1300px;
   margin: 0 auto;
 }
