--- a/src/components/main/main.pug
+++ b/src/components/main/main.pug
@@ -3,20 +3,40 @@ main.main
     .main__title.sectionTitle jabones organicos faciales
     .main__box
       .main__item.card 
-        .card__title MIEL
+        .card__title Miel
         .card__photo 
           img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
-          | Apto para cualquier tipo de piel, remueve celulas muertas, previene las arrugas. Reestructura la dermis, aliviando tambien las infecciones cutaneas.
+          |Maxima suavidad e hidratación
       .main__item.card 
-        .card__title ROMERO
+        .card__title Avena
         .card__photo 
           img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
-          | Posee una gran cantidad de nutrientes, vitaminas y antioxidantes. Que ayudaran a mantener la piel elastica y firme. Sus propiedades astringentes, lo hacen muy eficaz, para eliminar poros, impurezas y lineas de expresion.
+          |Combate las celulas muertas
       .main__item.card 
-        .card__title PEPINO Y MIEL
+        .card__title Romero
         .card__photo 
           img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
-          | Hidrata y refresca la piel, es efectivo para las manchas. Retarda el envejecimiento, combate el acne y alivia las quemaduras solares.
+          | Regenera la piel y lineas de expresión
+      .main__item.card 
+        .card__title Pepino y miel
+        .card__photo 
+          img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
+        .card__description 
+          | Elimina las manchas, retarda el envejecimiento
+      .main__item.card 
+        .card__title Aloe Vera y miel
+        .card__photo 
+          img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
+        .card__description 
+          | Elimina el exceso de grasa y combate a profundidad el acne
+    .main__title.sectionTitle cremas faciales
+    .main__box 
+       .main__item.card 
+        .card__title Crema 2 en 1
+        .card__photo 
+          img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
+        .card__description 
+          |Mas firmeza, menos arrugas, reafirmante
