--- a/src/components/opinions/opinions.pug
+++ b/src/components/opinions/opinions.pug
@@ -7,25 +7,25 @@
       .swiper-wrapper
         //Slides
         .swiper-slide
-          p.swiper-opinion EXCELENTE PRODUCTO 100 % RECOMENDABLE ME ENCANTA EL JABON DE PEPINO CON MIEL Y LA CREMA FACIAL ES BUENISIMA
-          p.swiper-client WENDY HERNANDEZ
-          p.swiper-city CIUDAD TORREON COAH
+          p.swiper-opinion Excelente producto 100 % recomendable, me encanta el jabon de pepino con miel y la crema es buenisima
+          p.swiper-client Wendy Hernandez
+          p.swiper-city Ciudad Torreón, Coahuila
         .swiper-slide
-          p.swiper-opinion TODA LA VARIEDAD DE JABONES ES EXEPCIONAL TODOS ME ENCANTAN, LLEVO 2 AÑOS APLICANDOME ESTE JABON Y LA VERDAD ME HAN DICHO QUE MI PIEL SE VE RADIANTE. LA CREMA TAMBIEN HA SIDO DE GRAN AYUDA PORQUE SOLIA TENER MARCAS DE ACNE Y HOY PUEDO DECIR QUE HAN DESAPARECIDO.
-          p.swiper-client OLGA DE LA GARZA
-          p.swiper-city cancun, mexico
+          p.swiper-opinion Toda la variedad de jabones es exepcional, me encantan, llevo 2 años comprando estos jabones y mi piel esta muy hidratada, junto con la crema me han ayudado a desvanecer las marcas de acne que solia tener estoy encantada con estos productos
+          p.swiper-client Olga de la Garza
+          p.swiper-city Cancún, México
         .swiper-slide
-          p.swiper-opinion HICE UN PEDIDO DE JABONES PARA LOS INVITADOS DE MI BODA, PRESISAMENTE PORQUE ESTOY MARAVILLADA CON ESTOS PRODUCTOS; LA CREMA ME ENCANTA LA PUEDO USAR DE DIA Y DE NOCHE AL IGUAL LOS JABONES,  E TENIDO CAMBIOS SORPRENDENTES EN MI ROSTRO. 
-          p.swiper-client LUCIA RUBIO
-          p.swiper-city CIUDAD TORREON COAH
+          p.swiper-opinion Estoy encantada con el jabon de Romero, ya que mi piel estaba muy reseca y desde que los estoy usando mi piel esta completamente hidratada, lo aplico de dia y de noche y he tenido exceletes resutados. La crema no la he probado, pero deseo hacer pronto mi pedido. 
+          p.swiper-client Lucia Rubio
+          p.swiper-city Ciudad Torreón, Coahuila
         .swiper-slide
-          p.swiper-opinion ESTOY ENCANTADA CON EL JABON DE ROMERO, MI PIEL ESTABA MUERTA,  MI CUTIS RESECO Y DESDE QUE EMPECE A PROBAR ESTE JABON E VUELTO A TENER HIDRATADA MI PIEL. LA CREMA NO LA HE PROBADO PERO DESEO PRONTO HACER MI PEDIDO.
-          p.swiper-client OLIVIA MARTINEZ
-          p.swiper-city SAN PEDRO COAH
+          p.swiper-opinion Considero que estos productos, cumplen con mis expectativas a bajo costo. Desde que uso el jabon de miel, e notado una gran diferencia, mi cara esta mucho mas radiante e hidratada, la crema me fascina, ambos los uso de dia y de noche; Con estos productos lo tengo todo.
+          p.swiper-client Olivia Martinez
+          p.swiper-city San Pedro, Coahuila
         .swiper-slide
-          p.swiper-opinion HACE TIEMPO SENTI LA NECESIDAD DE COMPRAR UN PRODUCTO A BAJO COSTO Y QUE CUMPLIERA CON MIS EXPECTATIVAS. DESDE QUE USO EL JABON DE MIEL, PUEDO NOTAR UNA GRAN DIFERENCIA EN MI CARA. LA CREMA TAMBIEN HA SIDO DE MUCHA AYUDA. AMPLIAMENTE RECOMIENDO ESTOS PRODUCTOS. 
-          p.swiper-client DARY VILLAREAL
-          p.swiper-city TORREON COAH
+          p.swiper-opinion Hice un pedido grande de estos productos, para un evento, Presisamente porque estoy maravillada con los cambios favorables que e tenido en mi rostro; Tenia muchas marcas de acne y ahora se han desaparecido. 
+          p.swiper-client Dary Villarreal
+          p.swiper-city Ciudad Torreón, Coahuila
       //If we need pagination
       .swiper-pagination
     //If we need navigation buttons
