--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,6 +5,7 @@
   height: 240px;
   text-align: center;
   padding-top: 10px;
+  
 
   &__subtitle {
     padding-top: 5px;
@@ -43,6 +44,7 @@
       border-radius: 3px;
       background-color: $colorMint;
       padding: 3px;
+      transition: all 0.3s linear 0.1s;
      
       a {
         
@@ -57,11 +59,9 @@
     }
     li:hover {
       box-shadow: 0 0 15px $colorMint;
+      transform: scale(1.05);
+      transition: all 0.3s linear 0.1s;
     }
   }
 }
 
-.container {
-  max-width: 1300px;
-  margin: 0 auto;
-}
