--- a/src/components/opinions/opinions.scss
+++ b/src/components/opinions/opinions.scss
@@ -46,7 +46,14 @@ body {
       text-align: center; 
       display: flex;
       flex-direction: column;
-      justify-content: center;    
+      justify-content: center; 
+      transition: all 0.3s linear 0.1s;   
+    }
+    .swiper-slide:hover {
+      transition: all 0.3s linear 0.1s;
+      box-shadow: 0 0 15px $colorMint;
+      transform: scale(1.01);
+
     }
   }
 
@@ -55,6 +62,9 @@ body {
     line-height: 1.4em;
     font-size: 1.3em;
     flex: 1 1 auto;
+  }
+  &-opinion:before, &-opinion:after {
+    content: ' " ';
   }
 
   &-client {
@@ -79,12 +89,6 @@ body {
 }
 
 
-
-.container {
-  font-family: mongolian, sans-serif;
-  max-width: 1300px;
-  margin: 0 auto; 
-}
 
 
 
