--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -6,7 +6,7 @@ header.header
     nav.header__nav 
       ul 
         li.header__item 
-          a(href="#") Misión
+          a(href="./index.html") Misión
         li.header__item  
           a(href="#") Productos
         li.header__item  
