--- a/src/styles/_container.scss
+++ b/src/styles/_container.scss
@@ -3,5 +3,5 @@
 .container {
   max-width: 1300px;
   margin: 0 auto;
-  text-shadow: 0 4px 8px $colorMint;
+  text-shadow: 0 4px 8px $colorTertiary;
 }
