--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 
 .header {
-  background-color: $colorLight;
+  background-color: $colorSecondary;
   height: 240px;
   text-align: center;
   padding-top: 10px;
@@ -42,7 +42,7 @@
     li {
       flex: 0 0 15%;
       border-radius: 3px;
-      background-color: $colorMint;
+      background-color: $colorTertiary;
       padding: 3px;
       transition: all 0.3s linear 0.1s;
      
@@ -58,8 +58,8 @@
       }      
     }
     li:hover {
-      box-shadow: 0 0 15px $colorMint;
-      transform: scale(1.05);
+      box-shadow: 0 5px 10px $colorTertiary;
+      transform: translateY(-3px) scale(1.02);
       transition: all 0.3s linear 0.1s;
     }
   }
