--- a/src/components/main/main.pug
+++ b/src/components/main/main.pug
@@ -2,31 +2,31 @@ main.main
   .container 
     .main__title.sectionTitle jabones organicos faciales
     .main__box
-      a.main__item.card(href="#") 
+      a.main__item.card(href="./page.html") 
         .card__title Miel
         .card__photo 
           img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
           |Maxima suavidad e hidratación
-      a.main__item.card(href="#")  
+      a.main__item.card(href="./page.html")  
         .card__title Avena
         .card__photo 
           img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
           |Combate las celulas muertas
-      a.main__item.card(href="#")  
+      a.main__item.card(href="./page.html")  
         .card__title Romero
         .card__photo 
           img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
           | Regenera la piel y lineas de expresión
-      a.main__item.card(href="#")  
+      a.main__item.card(href="./page.html") 
         .card__title Pepino y miel
         .card__photo 
           img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
           | Elimina las manchas, retarda el envejecimiento
-      a.main__item.card(href="#")  
+      a.main__item.card(href="./page.html")  
         .card__title Aloe Vera y miel
         .card__photo 
           img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
@@ -34,7 +34,7 @@ main.main
           | Elimina el exceso de grasa y combate a profundidad el acne
     .main__title.sectionTitle cremas faciales
     .main__box 
-       a.main__item.card(href="#")  
+       a.main__item.card(href="./page.html")  
         .card__title Crema 2 en 1
         .card__photo 
           img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
