--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -8,8 +8,8 @@ header.header
         li.header__item 
           a(href="./index.html") Misión
         li.header__item  
-          a(href="#") Productos
+          a(href="#products") Productos
         li.header__item  
-          a(href="#") Opiniones
+          a(href="#opinions") Opiniones
         li.header__item  
-          a(href="#") Contactos  
+          a(href="#contacts") Contactos  
