--- a/src/components/opinions/opinions.pug
+++ b/src/components/opinions/opinions.pug
@@ -1,4 +1,4 @@
-.opinions
+.opinions#opinions
   .container
     .opinions__title.sectionTitle Opiniones de nuestros clientes
     //Slider main container
