--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,4 +1,4 @@
-footer.footer
+footer.footer#contacts
   .container 
     .footer__logo
       img.logo.footer__img(src=require("../../images/logoPinkWithBG.png"), alt="logo")
