header adaptive + menu burger

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -4,7 +4,7 @@ header.header
     .header__subtitle "Cuidate, Consientate, Enamorate de ti..."
     .header__title JABONES ARTESANALES MARGARITA
     nav.header__nav 
-      ul 
+      ul.header__list 
         li.header__item 
           a(href="./index.html") Misión
         li.header__item  
@@ -12,4 +12,6 @@ header.header
         li.header__item  
           a(href="#opinions") Opiniones
         li.header__item  
-          a(href="#contacts") Contactos  
+          a(href="#contacts") Contactos
+    nav.header__nav_burger
+      .burger__inner  
