--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -22,9 +22,7 @@
     display: flex;
     margin:25px 0 35px auto;
     justify-content: center;
-    width: 90%;
-    
-   
+    width: 90%;  
   }
 
   &__item {
@@ -45,13 +43,11 @@
       box-shadow: 0 0 10px $colorTertiary;
       height: 80%;
       margin-right: 15px;
-
     }
     p {
       font-size: 18px;
       font-family: oswald;
-      font-weight: 400;
-     
+      font-weight: 400;    
     }
   }
 
@@ -66,3 +62,68 @@
     }
   }
 } 
+
+@media (max-width: 1290px) {
+  .footer {
+    //background-color: $colorPrimary;
+    //padding: 15px 0;
+    //position: relative;
+    
+    &__logo {
+      //position: absolute;   
+      img {
+       // margin: 7px auto;
+        //width: 100px;  
+      }
+    }
+    
+    &__title {
+  
+    }
+  
+    &__row {
+      //display: flex;
+      //margin:25px 0 35px auto;
+      //justify-content: center;
+      //width: 90%;
+      flex-wrap: wrap; 
+    }
+  
+    &__item {
+      flex: 0 0 40%;
+      margin: 0 30px 20px;
+      text-align: center;
+      font-weight: 700;
+      color: $colorFont;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.3s linear 0.1s;
+     
+      img {
+        background-color: $colorTertiary;
+        border-radius: 50%;
+        box-shadow: 0 0 10px $colorTertiary;
+        height: 80%;
+        margin-right: 15px;
+      }
+      p {
+        font-size: 18px;
+        font-family: oswald;
+        font-weight: 400;    
+      }
+    }
+  
+    &__item:hover {
+      transform: translateY(-2px) scale(1.04);
+      transition: all 0.3s linear 0.1s;
+      img {
+        box-shadow: 0 5px 10px $colorSecondary, 0 5px 20px $colorTertiary;
+      }
+      p {
+        text-shadow: 0 5px 10px $colorSecondary, 0 5px 20px $colorTertiary;
+      }
+    }
+  } 
+}
