--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,9 @@
 @import '../../styles/variables';
 
+body.lock {
+  overflow: hidden;
+}
+
 .header {
   transition: all 0.8s linear 0.05s;
   display: block;
@@ -9,6 +13,7 @@
   height: 240px;
   text-align: center;
   padding-top: 10px;
+  z-index: 100;
   
 
   &__subtitle {
@@ -22,7 +27,7 @@
     transition: all 0.8s linear 0.05s;
     font-weight: 700;
     font-size: 3.7em;
-    margin: 50px auto;
+    margin: 50px auto 35px;
     font-family: $font-family-title;
     font-weight: 400;
   }
@@ -35,39 +40,86 @@
   }
 
   &__nav {
+    z-index: 100;
+    position: absolute;
+    bottom: 20px;
+    left: 55%;
+    transform: translateX(-50%);
+    width: 70%;
     transition: all 0.8s linear 0.05s;
     font-size: 2em;
     line-height: 2em;
-    font-family: $font-family-subtitle;
+    font-family: $font-family-subtitle;  
+  }
+
+  &__nav_burger {
+    display: none;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 50px;
+    top: 50px;
+    transition: all 0.8s linear 0.05s;
+    
+
+    .burger__inner {
+      background-color: #000;
+      height: 4px;
+      width: 100%;
+      margin: 50% 0;
+      transform: translateY(-50%);
+      box-shadow: 0 4px 8px $colorTertiary;
+      transition: all 0.8s linear 0.05s;
+    }
+  }
+
+  &__nav_burger::before, &__nav_burger::after {
+    content: "";
+    display: block;
+    height: 4px;
+    width: 100%;
+    background-color: #000;
+    position: absolute;
+    box-shadow: 0 4px 8px $colorTertiary;
     
   }
-  ul {
+  &__nav_burger::before {
+    top: 0;
+    transition: all 0.8s linear 0.05s;
+  }
+
+  &__nav_burger::after {
+    transition: all 0.8s linear 0.05s;
+    bottom: 0;
+  }
+
+
+  &__list {
     display: flex; 
-    justify-content: space-between;
-     
-    li {
-      flex: 0 0 15%;
-      border-radius: 3px;
-      background-color: $colorTertiary;
-      padding: 3px;
-      transition: all 0.3s linear 0.1s;
-     
-      a {
-        
-        text-transform: uppercase;
-        font-size: 0.7em;
-        line-height: 0.7em;
-        display: block;
-        color: black;
-        border: 1px solid #000;
-        padding: 5px;
-      }      
-    }
-    li:hover {
-      box-shadow: 0 5px 10px $colorTertiary;
-      transform: translateY(-3px) scale(1.02);
-      transition: all 0.3s linear 0.1s;
-    }
+    justify-content: space-evenly;    
+  }
+  &__item {
+    flex: 0 0 15%;
+    border-radius: 3px;
+    background-color: $colorTertiary;
+    padding: 3px;
+    font-size: 0.7em;
+    line-height: 0.7em;
+    transition: all 0.3s linear 0.1s;
+   
+    a {
+      text-transform: uppercase;
+      display: block;
+      color: black;
+      border: 1px solid #000;
+      padding: 5px;
+    }      
+  }
+
+  &__item:hover {
+    box-shadow: 0 5px 10px $colorTertiary;
+    transform: translateY(-3px) scale(1.02);
+    transition: all 0.3s linear 0.1s;
   }
 }
 
@@ -78,7 +130,7 @@
   width: 100%;
   height: 120px;
   padding-top: 0px;
-  z-index: 10;
+  z-index: 100;
 
   &__subtitle {
     display: none;
@@ -106,4 +158,461 @@
     line-height: 1.8em;
   }
 }
+
+@media (max-width: 1290px) {
+  .header {
+    //transition: all 0.8s linear 0.05s;
+    //display: block;
+    //position: fixed;
+    //width: 100%;
+    //background-color: $colorSecondary;
+    height: 220px;
+   // text-align: center;
+    //padding-top: 10px;
+    //z-index: 10;
+    
+  
+    &__subtitle {
+      //transition: all 0.8s linear 0.05s;
+      font-size: 1.6em;
+      //font-family: $font-family-subtitle;
+      //font-style: italic;
+    }
+  
+    &__title {
+      //transition: all 0.8s linear 0.05s;
+      //font-weight: 700;
+      font-size: 3.5em;
+      margin: 45px auto 35px;
+      //font-family: $font-family-title;
+      //font-weight: 400;
+    }
+  
+    img.logo {
+      //transition: all 0.8s linear 0.05s;
+      //float: left;
+      //display: block;
+      height: 200px; 
+    }
+  
+    &__nav {
+      //transition: all 0.8s linear 0.05s;
+      //font-size: 2em;
+      //line-height: 2em;
+      //font-family: $font-family-subtitle;
+      
+    }
+    ul {
+      //display: flex; 
+      //justify-content: space-evenly;
+       
+      li {
+        //flex: 0 0 15%;
+        //border-radius: 3px;
+        //background-color: $colorTertiary;
+        //padding: 3px;
+        //transition: all 0.3s linear 0.1s;
+       
+        a {
+          
+          //text-transform: uppercase;
+          //font-size: 0.7em;
+          //line-height: 0.7em;
+          //display: block;
+          //color: black;
+          //border: 1px solid #000;
+          //padding: 5px;
+        }      
+      }
+      li:hover {
+        //box-shadow: 0 5px 10px $colorTertiary;
+        //transform: translateY(-3px) scale(1.02);
+        //transition: all 0.3s linear 0.1s;
+      }
+    }
+  }
+}
+
+@media (max-width: 1100px) {
+  .header {
+    //transition: all 0.8s linear 0.05s;
+    //display: block;
+    //position: fixed;
+    //width: 100%;
+    //background-color: $colorSecondary;
+    height: 210px;
+   // text-align: center;
+    //padding-top: 10px;
+    //z-index: 10;
+    
+  
+    &__subtitle {
+      //transition: all 0.8s linear 0.05s;
+      //font-size: 1.6em;
+      //font-family: $font-family-subtitle;
+      //font-style: italic;
+    }
+  
+    &__title {
+      //transition: all 0.8s linear 0.05s;
+      //font-weight: 700;
+      font-size: 3.3em;
+      line-height: 1.2em;
+      margin: 10px auto;
+      //font-family: $font-family-title;
+      //font-weight: 400;
+    }
+  
+    img.logo {
+      //transition: all 0.8s linear 0.05s;
+      //float: left;
+      //display: block;
+      height: 190px; 
+    }
+  
+    &__nav {
+      //transition: all 0.8s linear 0.05s;
+      //font-size: 2em;
+      //line-height: 2em;
+      //font-family: $font-family-subtitle;
+      
+    }
+    ul {
+      //display: flex; 
+      //justify-content: space-evenly;
+       
+      li {
+        //flex: 0 0 15%;
+        //border-radius: 3px;
+        //background-color: $colorTertiary;
+        //padding: 3px;
+        //transition: all 0.3s linear 0.1s;
+       
+        a {
+          
+          //text-transform: uppercase;
+          //font-size: 0.7em;
+          //line-height: 0.7em;
+          //display: block;
+          //color: black;
+          //border: 1px solid #000;
+          //padding: 5px;
+        }      
+      }
+      li:hover {
+        //box-shadow: 0 5px 10px $colorTertiary;
+        //transform: translateY(-3px) scale(1.02);
+        //transition: all 0.3s linear 0.1s;
+      }
+    }
+  } 
+}
+
+@media (max-width: 883px) {
+  .header {
+    //transition: all 0.8s linear 0.05s;
+    //display: block;
+    //position: fixed;
+    //width: 100%;
+    //background-color: $colorSecondary;
+    height: 200px;
+   // text-align: center;
+    //padding-top: 10px;
+    //z-index: 10;
+    
+  
+    &__subtitle {
+      //transition: all 0.8s linear 0.05s;
+      font-size: 1.4em;
+      //font-family: $font-family-subtitle;
+      //font-style: italic;
+    }
+  
+    &__title {
+      //transition: all 0.8s linear 0.05s;
+      //font-weight: 700;
+      font-size: 2.8em;
+      line-height: 1.2em;
+      margin: 15px auto 5px;
+      //font-family: $font-family-title;
+      //font-weight: 400;
+    }
+  
+    img.logo {
+      //transition: all 0.8s linear 0.05s;
+      //float: left;
+      //display: block;
+      height: 160px; 
+    }
+  
+    &__nav {
+      //transition: all 0.8s linear 0.05s;
+      font-size: 1.7em;
+      width: 80%;
+      margin-left: 25px;
+      bottom: 15px;
+      //line-height: 2em;
+      //font-family: $font-family-subtitle;
+      
+    }
+    ul {
+      //display: flex; 
+      //justify-content: space-evenly;
+       
+      li {
+        //flex: 0 0 15%;
+        //border-radius: 3px;
+        //background-color: $colorTertiary;
+        //padding: 3px;
+        //transition: all 0.3s linear 0.1s;
+       
+        a {
+          
+          //text-transform: uppercase;
+          //font-size: 0.7em;
+          //line-height: 0.7em;
+          //display: block;
+          //color: black;
+          //border: 1px solid #000;
+          //padding: 5px;
+        }      
+      }
+      li:hover {
+        //box-shadow: 0 5px 10px $colorTertiary;
+        //transform: translateY(-3px) scale(1.02);
+        //transition: all 0.3s linear 0.1s;
+      }
+    }
+  }
+
+  .scroll.header {
+    //transition: all 0.8s linear 0.05s;
+    //display: block;
+   // position: fixed;
+    //width: 100%;
+    height: 110px;
+    //padding-top: 0px;
+    //z-index: 10;
+  
+    &__subtitle {
+      /*
+      display: none;
+      transition: all 0.8s linear 0.05s;*/
+    }
+  
+    &__title {
+      font-size: 2.1em;
+      margin: 5px auto 20px;
+      //transition: all 0.8s linear 0.05s;
+    }
+  
+    img.logo.scroll {
+      //transition: all 0.8s linear 0.05s;
+      //float: left;
+      //display: block;
+      //height: 100px; 
+    }
+  
+    &__nav {
+      //transition: all 0.8s linear 0.05s;
+      font-size: 1.5em;
+     // margin: 0 0 0 auto;
+      width: 80%;
+      line-height: 1.5em;
+    }
+  }  
+}
+
+@media (max-width: 700px) {
+  .header {
+    //transition: all 0.8s linear 0.05s;
+    //display: block;
+    //position: fixed;
+    //width: 100%;
+    //background-color: $colorSecondary;
+    height: auto;
+   // text-align: center;
+    padding-top: 20px;
+    //z-index: 10;
+    
+  
+    &__subtitle {
+      transition: all 0.8s linear 0.05s;
+      font-size: 1.2em;
+      //font-family: $font-family-subtitle;
+      //font-style: italic;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  
+    &__title {
+      //transition: all 0.8s linear 0.05s;
+      //font-weight: 700;
+      font-size: 1.8em;
+      line-height: 1.1em;
+      margin: 10px auto 15px;
+      //font-family: $font-family-title;
+      //font-weight: 400;
+    }
+  
+    img.logo {
+      //transition: all 0.8s linear 0.05s;
+      //float: left;
+      float: none;
+      margin-left: 30px;
+      //display: block;
+      height: 100px; 
+      
+    }
+  
+    &__nav {
+      //transition: all 0.8s linear 0.05s;
+      font-size: 1.7em;
+      //width: 100%;
+      margin-left: 25px;
+      bottom: 15px;
+      //line-height: 2em;
+      //font-family: $font-family-subtitle;
+      display: none;
+    }
+
+    &__nav_burger {
+      display: block;
+      right: 50px;
+      top: 50px;
+    }
+    
+    &__list {
+      display: block;
+      text-align: left;
+      margin: 20px auto auto 20px;
+         
+    }
+    &__item {
+      
+      border-radius: none;
+      text-align: center;
+      //background-color: $colorTertiary;
+      //padding: 3px;
+      //transition: all 0.3s linear 0.1s;
+     
+      a {
+        //text-transform: uppercase;
+        font-size: 1.4em;
+        line-height: 1em;
+        //display: block;
+        //color: black;
+        border: none;
+        padding: 10px;
+      }      
+    }
+  }
+
+  .scroll.header {
+    //transition: all 0.8s linear 0.05s;
+    //display: block;
+   // position: fixed;
+    //width: 100%;
+    height: auto;
+    //padding-top: 0px;
+    //z-index: 10;
+  
+    &__subtitle {
+      
+      display: none;
+      transition: all 0.8s linear 0.05s;
+    }
+  
+    &__title {
+      display: none;
+      font-size: 2.1em;
+      margin: 5px auto 20px;
+      //transition: all 0.8s linear 0.05s;
+    }
+
+    &__nav_burger {
+      top: 20px;
+      transition: all 0.8s linear 0.05s;
+    }
+  
+    img.logo.scroll {
+      //transition: all 0.8s linear 0.05s;
+      //float: left;
+      //display: block;
+      height: 80px; 
+    }
+
+  
+    &__nav {
+      transition: all 0.8s linear 0.05s;
+      font-size: 1.5em;
+     // margin: 0 0 0 auto;
+      width: 100%;
+      line-height: 1.5em;
+    }
+    &__nav.dropped {
+      transform: translateX(0);
+      transition: all 0.8s linear 0.05s;
+      //font-size: 2em;
+      //line-height: 2em;
+      //font-family: $font-family-subtitle;  
+      z-index: 5;
+      display: block;
+      position: absolute;
+      background-color: $colorTertiary;
+      top: 100%;
+      left: 0;
+      height: 100vh;
+      opacity: 85%;  
+    }
+
+
+    /////////////////////// burger dropped
+    &__nav_burger.dropped {
+
+      transition: all 0.8s linear 0.05s;
+      .burger__inner {
+        display: block;
+        background-color: #000;
+        height: 5px;
+        width: 100%;
+        margin: 50% 0;
+        transform: scale(0);
+        box-shadow: 0 4px 8px $colorTertiary;
+        transition: all 0.8s linear 0.05s;
+      }
+    }
+
+    &__nav_burger.dropped::before, &__nav_burger.dropped::after {
+      content: "";
+      display: block;
+      height: 5px;
+      width: 100%;
+      background-color: #000;
+      position: absolute;
+      box-shadow: 0 4px 8px $colorTertiary;
+      
+    }
+    &__nav_burger.dropped::before {
+      top: 0;
+      transform: translateY(17.5px) rotate(45deg);
+      transition: all 0.8s linear 0.05s;
+    }
+
+    &__nav_burger.dropped::after {
+      bottom: 0;
+      transform: translateY(-17.5px) rotate(-45deg);
+      transition: all 0.8s linear 0.05s;
+    }
+ 
+    
+    //////////////////
+   
+  
+  }
+}
+
 
