--- a/src/components/opinions/opinions.scss
+++ b/src/components/opinions/opinions.scss
@@ -14,10 +14,10 @@ body {
     z-index: 20;
   }
   .swiper-button-prev {
-    left: 7%;
+    left: 20px;
   }
   .swiper-button-next {
-    right: 7%;
+    right: 20px;
   }
   
   .swiper-button-prev:hover, .swiper-button-next:hover {
@@ -25,7 +25,7 @@ body {
   }
 }
 .swiper {
-  width: 1200px;
+  max-width: 90%;
   height: 295px;
   border-radius: 20px;
   box-shadow: 0 0 50px $colorPrimary;
@@ -88,6 +88,92 @@ body {
   }
 }
 
+@media (max-width: 1290px) {
+  .opinions {
+    //padding-top: 20px;
+    //position: relative;
+    
+    .swiper-button-prev, .swiper-button-next {
+      //color: rgba(0, 0, 0, 0.7);
+      //top: 60%;
+      //position: absolute;
+      //z-index: 20;
+    }
+    .swiper-button-prev {
+      left: 10px;
+    }
+    .swiper-button-next {
+      right: 10px;
+    }
+    
+    .swiper-button-prev:hover, .swiper-button-next:hover {
+      //color: rgba(0, 0, 0, 0.5);
+    }
+  }
+  .swiper {
+    width: 1200px;
+    height: 295px;
+    border-radius: 20px;
+    box-shadow: 0 0 50px $colorPrimary;
+    margin: 30px auto 45px;
+    display: flex;
+    justify-content: center;
+  
+    &-wrapper {
+      margin: 20px;
+  
+      .swiper-slide {
+        background-color: $colorTertiary;
+        height: 250px;
+        overflow: hidden;
+        border: 7px solid $colorSecondary;
+        border-radius: 20px;
+        padding: 15px;
+        text-align: center; 
+        display: flex;
+        flex-direction: column;
+        justify-content: center; 
+        transition: all 0.3s linear 0.1s;   
+      }
+      .swiper-slide:hover {
+        transition: all 0.3s linear 0.1s;
+        box-shadow: 0 7px 15px $colorTertiary;
+        transform: translateY(-7px) scale(1.01);
+  
+      }
+    }
+  
+    &-opinion {
+      font-family: oswald;
+      line-height: 1.4em;
+      font-size: 1.3em;
+      flex: 1 1 auto;
+    }
+    &-opinion:before, &-opinion:after {
+      content: ' " ';
+    }
+  
+    &-client {
+      text-transform: uppercase;
+      margin: 10px auto;
+      font-family: julian;
+      font-size: 1.2em;
+  
+    }
+  
+    &-city {
+      text-transform: capitalize;
+      font-weight: 700;
+      font-size: 1.1em;
+    }
+  
+    &-pagination {
+      .swiper-pagination-bullet-active {
+        background-color: rgba(0, 0, 0, 0.7);
+      }   
+    }
+  }
+}
 
 
 
