--- a/src/components/main/main.pug
+++ b/src/components/main/main.pug
@@ -5,31 +5,31 @@ main.main#products
       a.main__item.card(href="./page.html") 
         .card__title Miel
         .card__photo 
-          img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
+          img.card__image.loading(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
           |Maxima suavidad e hidratación
       a.main__item.card(href="./page.html")  
         .card__title Avena
         .card__photo 
-          img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
+          img.card__image.loading(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
           |Combate las celulas muertas
       a.main__item.card(href="./page.html")  
         .card__title Romero
         .card__photo 
-          img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
+          img.card__image.loading(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
           | Regenera la piel y lineas de expresión
       a.main__item.card(href="./page.html") 
         .card__title Pepino y miel
         .card__photo 
-          img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
+          img.card__image.loading(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
           | Elimina las manchas, retarda el envejecimiento
       a.main__item.card(href="./page.html")  
         .card__title Aloe Vera y miel
         .card__photo 
-          img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
+          img.card__image.loading(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
           | Elimina el exceso de grasa y combate a profundidad el acne
     .main__title.sectionTitle cremas faciales
@@ -37,6 +37,6 @@ main.main#products
        a.main__item.card(href="./page.html")  
         .card__title Crema 2 en 1
         .card__photo 
-          img.card__image(src=require("../../images/jabon1.png"), alt="image#1")
+          img.card__image.loading(src=require("../../images/jabon1.png"), alt="image#1")
         .card__description 
           |Mas firmeza, menos arrugas, reafirmante
