--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @use '../components/footer/footer';
 @use '../components/main/main';
 @use '../components/opinions/opinions';
+@use '../components/mission/mission';
 
 //import fonts and variables
 @import 'fonts';
