--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 @use '../components/main/main';
 @use '../components/opinions/opinions';
 @use '../components/mission/mission';
+@use '../components/product/product';
 
 //import fonts and variables
 @import 'fonts';
