Para Mex corrected colors

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -8,9 +8,9 @@ header.header
         li.header__item 
           a(href="./index.html") Misión
         li.header__item  
-          a(href="#products") Productos
+          a(href="./index.html#products") Productos
         li.header__item  
-          a(href="#opinions") Opiniones
+          a(href="./index.html#opinions") Opiniones
         li.header__item  
           a(href="#contacts") Contactos
     nav.header__nav_burger
