added database, deleted page.html

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -5,13 +5,13 @@ header.header
     .header__title JABONES ARTESANALES MARGARITA
     nav.header__nav 
       ul.header__list 
-        li.header__item 
+        li.header__item#mission-btn 
           a(href="./index.html") Misión
-        li.header__item  
+        li.header__item#products-btn
           a(href="./index.html#products") Productos
-        li.header__item  
+        li.header__item#opinions-btn  
           a(href="./index.html#opinions") Opiniones
         li.header__item  
-          a(href="#contacts") Contactos
+          a(href="./index.html#contacts") Contactos
     nav.header__nav_burger
       .burger__inner  
