--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -68,6 +68,7 @@
   transform: translateY(-10px) scale(1.04);
   box-shadow: 0 10px 10px $colorTertiary;
   transition: all 0.3s linear 0.1s;
+  cursor: pointer;
 }
 
 @media (max-width: 1290px) {
