--- a/src/components/opinions/opinions.scss
+++ b/src/components/opinions/opinions.scss
@@ -53,6 +53,7 @@ body {
       transition: all 0.3s linear 0.1s;
       box-shadow: 0 7px 15px $colorTertiary;
       transform: translateY(-7px) scale(1.01);
+      cursor: grabbing;
 
     }
   }
