--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -10,7 +10,7 @@ body {
 
   &__box {
     margin-top: 0px;
-    padding-top: 225px; 
+    padding-top: 200px; 
   }
 
   &__card {
@@ -38,6 +38,10 @@ body {
     font-size: 20px;
     text-align: center;
     overflow: hidden;
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
   }
 
   &__description {
