--- a/src/components/main/main.pug
+++ b/src/components/main/main.pug
@@ -1,6 +1,6 @@
-main.main#products
+main.main
   .container 
-    .main__title.sectionTitle jabones organicos faciales 
+    .main__title.sectionTitle#products jabones organicos faciales 
     .main__box#box1
     .main__title.sectionTitle cremas faciales
     .main__box#box2 
