modified nav links

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -5,11 +5,11 @@ header.header
     .header__title JABONES ARTESANALES MARGARITA
     nav.header__nav 
       ul.header__list 
-        li.header__item#mission-btn 
-          a(href="./index.html") Misión
-        li.header__item#products-btn
+        li.header__item
+          a(href="./index.html#mission") Misión
+        li.header__item
           a(href="./index.html#products") Productos
-        li.header__item#opinions-btn  
+        li.header__item
           a(href="./index.html#opinions") Opiniones
         li.header__item  
           a(href="./index.html#contacts") Contactos
