--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -5,19 +5,20 @@ body {
   flex-direction: column;
 }
 .product {
+  display: none;
   flex: 1 1 auto;
   background-color: $colorTertiary;
 
   &__box {
     margin-top: 0px;
-    padding-top: 200px; 
+    padding-top: 230px; 
   }
 
   &__card {
     background-color: $colorSecondary;
     border-radius: 15px;
     box-shadow: 0 0 10px $colorSecondary;
-    padding: 5px 20px 10px;
+    padding: 5px 30px 10px;
     margin: 25px auto 20px;
     text-align: center;
   }
