--- a/src/index.pug
+++ b/src/index.pug
@@ -8,6 +8,7 @@ html(lang="en")
   body
     include components/header/header
     include components/mission/mission
+    include components/product/product
     include components/main/main 
     include components/opinions/opinions 
     include components/footer/footer
