optimization of assets

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,6 +1,6 @@
 header.header
   .container    
-    img.header__logo.logo(src=require("../../images/logoPinkMod.png"), alt="logo") 
+    img.header__logo.logo(src=require("../../../images/logoPinkMod.png"), alt="logo") 
     .header__subtitle "Cuidate, Consientete, Enamorate de ti..."
     .header__title JABONES ARTESANALES MARGARITA
     nav.header__nav 
