--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,12 +5,12 @@ $colorBlack: #000;
 $colorLight: #f7eff1;
 $colorPink: #ffabab;
 $colorMint: #c6e5b1;
-$colorBlue: rgb(233, 126, 126);
-$colorBlue05: rgba(233, 126, 126, 0.7);
+$colorRose: rgb(233, 126, 126);
+$colorRose05: rgba(233, 126, 126, 0.7);
 
 //colors dynamic
 
-$colorPrimary: $colorBlue;
+$colorPrimary: $colorRose;
 $colorSecondary: $colorLight;
 $colorTertiary: $colorMint;
 $colorFont: $colorBlack;
