--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -320,11 +320,15 @@ body.lock {
       margin: 0;
       padding: 0;
       
+      
       a {
         color: #fff;
         border: none;
         padding: 20px;
       }      
+    }
+    &__item:hover {
+      box-shadow: none;
     }
   }
 
