--- a/src/components/mission/mission.scss
+++ b/src/components/mission/mission.scss
@@ -16,21 +16,15 @@
     font-family: amaranth;
     text-shadow: 0 0 5px $colorPrimary;
     line-height: 1.5em;
-
   }
 
   &__description {
-    background-color: $colorBlue05;
+    background-color: $colorRose05;
     border-radius: 8px;
-    
     
   }
 }
-@media (max-width: 1290px) {
-}
-@media (max-width: 1100px) {
-  
-}
+
 @media (max-width: 883px) {
   .mission{
     &__description {
@@ -44,16 +38,10 @@
     padding-top: 400px;
     height: 100vh;
   
-  &__box {
-    padding: 0;
-    font-size: 1.4em;
-    line-height: 1.2em;
+    &__box {
+      padding: 0;
+      font-size: 1.4em;
+      line-height: 1.2em;
+    }
   }
-
-  &__description {
-    background-color: $colorBlue05;
-    border-radius: 8px;
-    
-  }
-}
 }
